--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,6 @@
 {% block title %}Etusivu{% endblock %}
 
 {% block content %}
-<h1>Tervetuloa Leffalistaan!</h1>
+<h1>Heipparallaa!</h1>
 <p>Tämä on elokuvien hallintasivusto. Rekisteröidy tai kirjaudu sisään nähdäksesi elokuvat!</p>
 {% endblock %}
