--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -6,11 +6,14 @@
         <label for="title">Otsikko:</label>
         <input type="text" name="title" required><br>
 
-        <label for="genre">Genre:</label>
-        <input type="text" name="genre" required><br>
-
         <label for="year">Vuosi:</label>
         <input type="number" name="year" required><br>
+
+        <label for="categories">Kategoriat:</label><br>
+        {% for category in categories %}
+            <input type="checkbox" name="categories" value="{{ category.id }}">
+            {{ category.name }}<br>
+        {% endfor %}
 
         <button type="submit">Lisää elokuva</button>
     </form>
