--- a/templates/edit_movie.html
+++ b/templates/edit_movie.html
@@ -1,4 +1,4 @@
-{% extends 'layout.html' %}
+{% extends "layout.html" %}
 
 {% block content %}
     <h2>Muokkaa elokuvaa</h2>
@@ -6,11 +6,15 @@
         <label for="title">Otsikko:</label>
         <input type="text" name="title" value="{{ movie.title }}" required><br>
 
-        <label for="genre">Genre:</label>
-        <input type="text" name="genre" value="{{ movie.genre }}" required><br>
-
         <label for="year">Vuosi:</label>
         <input type="number" name="year" value="{{ movie.year }}" required><br>
+
+        <label for="categories">Kategoriat:</label><br>
+        {% for category in categories %}
+            <input type="checkbox" name="categories" value="{{ category.id }}"
+                {% if category.id in selected_category_ids %}checked{% endif %}>
+            {{ category.name }}<br>
+        {% endfor %}
 
         <button type="submit">Tallenna muutokset</button>
     </form>
