--- a/templates/movies.html
+++ b/templates/movies.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-    <h2>Omat elokuvat</h2>
+    <h2><strong>Elokuvat</strong></h2>
 
     <!-- Hakulomake -->
     <form method="POST">
@@ -16,15 +16,28 @@
     <ul>
         {% for movie in movies %}
             <li>
-                <strong>{{ movie.title }}</strong> ({{ movie.year }}) - {{ movie.genre }}
-                <a href="{{ url_for('edit_movie', movie_id=movie.id) }}">Muokkaa</a> | 
-                <a href="{{ url_for('delete_movie', movie_id=movie.id) }}">Poista</a>
+                <strong><a href="{{ url_for('movie_details', movie_id=movie.id) }}">{{ movie.title }}</a></strong> ({{ movie.year }}) 
+                {% if movie.categories %}
+                    – Kategoriat: {{ movie.categories }}
+                {% else %}
+                    – Ei määriteltyjä kategorioita
+                {% endif %}
+
+                {% if movie.username == session['username'] %}
+                    <span style="font-weight: bold;"> - Lisännyt: {{ movie.username }}</span>
+                    <a href="{{ url_for('edit_movie', movie_id=movie.id) }}">Muokkaa</a> | 
+                    <a href="{{ url_for('delete_movie', movie_id=movie.id) }}">Poista</a>
+                {% else %}
+                    <span> - Lisännyt: {{ movie.username }}</span>
+                {% endif %}
             </li>
         {% endfor %}
     </ul>
+
     <form action="{{ url_for('logout') }}" method="get">
         <button type="submit" style="background-color: red; color: white; border: none; padding: 8px 12px; cursor: pointer;">
             Kirjaudu ulos
         </button>
     </form>
+    <a href="{{ url_for('profile') }}">Oma profiili</a>
 {% endblock %}
