--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -1,19 +1,26 @@
 {% extends "layout.html" %}
 
+{% block title %}Lisää elokuva{% endblock %}
+
 {% block content %}
     <h2>Lisää uusi elokuva</h2>
+
     <form method="POST">
-        <label for="title">Otsikko:</label>
-        <input type="text" name="title" required><br>
+        <label for="title">Elokuvan nimi:</label><br>
+        <input type="text" name="title" id="title" maxlength="150" required><br><br>
 
-        <label for="year">Vuosi:</label>
-        <input type="number" name="year" required><br>
+        <label for="year">Julkaisuvuosi:</label><br>
+        <input type="number" name="year" id="year" required><br><br>
 
-        <label for="categories">Kategoriat:</label><br>
+        <label>Kategoriat:</label><br>
         {% for category in categories %}
             <input type="checkbox" name="categories" value="{{ category.id }}">
             {{ category.name }}<br>
         {% endfor %}
+        <br>
+
+        <label for="new_category">Tai lisää uusi genre:</label><br>
+        <input type="text" name="new_category" id="new_category" maxlength="50"><br><br>
 
         <button type="submit">Lisää elokuva</button>
     </form>
