--- a/templates/movies.html
+++ b/templates/movies.html
@@ -10,7 +10,10 @@
     </form>
 
     <br>
-    <a href="{{ url_for('add_movie') }}">Lisää uusi elokuva</a>
+    <a href="{{ url_for('add_movie') }}" 
+       style="display: inline-block; background-color: #4CAF50; color: white; padding: 10px 20px; text-decoration: none; border-radius: 5px; font-size: 16px;">
+        Lisää uusi elokuva
+    </a>
     <br><br>
 
     <ul>
@@ -33,11 +36,4 @@
             </li>
         {% endfor %}
     </ul>
-
-    <form action="{{ url_for('logout') }}" method="get">
-        <button type="submit" style="background-color: red; color: white; border: none; padding: 8px 12px; cursor: pointer;">
-            Kirjaudu ulos
-        </button>
-    </form>
-    <a href="{{ url_for('profile') }}">Oma profiili</a>
 {% endblock %}
