--- a/templates/movies.html
+++ b/templates/movies.html
@@ -16,24 +16,29 @@
     </a>
     <br><br>
 
-    <ul>
-        {% for movie in movies %}
-            <li>
-                <strong><a href="{{ url_for('movie_details', movie_id=movie.id) }}">{{ movie.title }}</a></strong> ({{ movie.year }}) 
-                {% if movie.categories %}
-                    – Kategoriat: {{ movie.categories }}
-                {% else %}
-                    – Ei määriteltyjä kategorioita
-                {% endif %}
+<ul>
+    {% for movie in movies %}
+        <li>
+            <strong><a href="{{ url_for('movie_details', movie_id=movie.id) }}">{{ movie.title }}</a></strong> ({{ movie.year }}) 
+            {% if movie.categories %}
+                – Kategoriat: {{ movie.categories }}
+            {% else %}
+                – Ei määriteltyjä kategorioita
+            {% endif %}
 
-                {% if movie.username == session['username'] %}
-                    <span style="font-weight: bold;"> - Lisännyt: {{ movie.username }}</span>
-                    <a href="{{ url_for('edit_movie', movie_id=movie.id) }}">Muokkaa</a> | 
-                    <a href="{{ url_for('delete_movie', movie_id=movie.id) }}">Poista</a>
-                {% else %}
-                    <span> - Lisännyt: {{ movie.username }}</span>
-                {% endif %}
-            </li>
-        {% endfor %}
-    </ul>
-{% endblock %}
+            {% if movie.username == session['username'] %}
+                <span style="font-weight: bold;"> - Lisännyt: {{ movie.username }}</span>
+                <a href="{{ url_for('edit_movie', movie_id=movie.id) }}">Muokkaa</a> | 
+                
+                <form method="POST" action="{{ url_for('delete_movie', movie_id=movie.id) }}" style="display:inline;">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+                    <button type="submit" style="background:none; border:none; color:red; cursor:pointer; padding:0;">
+                        Poista
+                    </button>
+                </form>
+            {% else %}
+                <span> - Lisännyt: {{ movie.username }}</span>
+            {% endif %}
+        </li>
+    {% endfor %}
+</ul>
