--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -6,7 +6,7 @@
     <h2>Lisää uusi elokuva</h2>
 
     <form method="POST">
-        <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+        <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
         
         <label for="title">Elokuvan nimi:</label><br>
         <input type="text" name="title" id="title" maxlength="150" required><br><br>
