--- a/templates/register.html
+++ b/templates/register.html
@@ -6,7 +6,7 @@
 <h2>Luo tunnus</h2>
 
 <form action="/register" method="post">
-    <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
+    <input type="hidden" name="csrf_token" value="{{ session.csrf_token }}" />
     <p>
         <label for="username">Tunnus</label>: <br />
         <input type="text" name="username" id="username" />
